[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich[toml]>=0.9.1",
    "django>=5.2.4",
    "granian>=2.4.1",
    "redis[hiredis]>=6.2.0",
    "tortoise-orm>=0.25.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.aerich]
tortoise_orm = "blog.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
addopts = "-s"